--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,11 @@ on:
         required: false
         default: false
         type: boolean
+      framework:
+        description: 'Rails framework'
+        required: true
+        default: 'railties'
+        type: string
 
 env:
   CI: true
@@ -93,14 +98,17 @@ jobs:
       #     key: ${{ runner.os }}-ruby-${{ inputs.ruby }}-${{ hashFiles('**/Gemfile.lock') }}
       #     restore-keys: ${{ runner.os }}-ruby-${{ inputs.ruby }}-
 
-      - name: Install bundler dependencies
-        run: bundle config unset deployment && bundle install --jobs 4 --retry 3
-        timeout-minutes: 1
+      # - name: Install bundler dependencies
+      #   run: bundle config unset deployment && bundle install --jobs 4 --retry 3
+      #   timeout-minutes: 1
 
       - name: Set up database
         run: |
           bundle exec rake db:create
           bundle exec rake db:migrate
+
+      - name: Run tests for ${{ inputs.framework }} on Ruby ${{ inputs.ruby }}
+        run: bundle exec rake test
 
   # run_tests:
   #   name: Run tests
