--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,7 @@ jobs:
       matrix:
         experimental: [false]
         ruby: [2.7, 3.0, 3.1, 3.2]
+        framework: [actionpack, activerecord, actionview, actionmailer, activesupport, activemodel, activestorage, railties]
         # include:
         #   - ruby: head
         #     experimental: true
@@ -17,6 +18,7 @@ jobs:
     with:
       ruby: ${{ matrix.ruby }}
       experimental: ${{ matrix.experimental }}
+      framework: ${{ matrix.framework }}
 
   # test:
   #   name: ${{ matrix.framework }}
